# ic-certification

./: .gitignore  CanisterSigs.html  CertTree.html  Developent.md  Dyadic.html  Makefile  MerkleTree.html  README.md  ReqData.html  flake.nix  index.html  mops.toml  package-set.dhall  vessel.dhall
.github/workflows/: ci.yml  release.yml
demo/: .gitignore  CanisterSigs.mo  ManagementCanister.mo  README.md  RepIndepHash.mo  canister_ids.json  dfx.json  main.mo  mops.toml  vessel.dhall
gen-tests/: cabal.project.freeze  gen-tests.cabal  main.hs
mops.nix/: node-packages.nix
src/: CanisterSigs.mo  Dyadic.mo  MerkleTree.mo  ReqData.mo
test/: Makefile  Test.mo
