cabal-version:      2.4
name:               gen-tests
version:            0.1
synopsis:           Generates tests for motoko-merkle-tree
author:             Joachim Breitner
maintainer:         mail@joachim-breitner.de
executable gen-tests
    main-is:          main.hs
    build-depends:    base ^>=4.16.4.0
    build-depends:    cryptonite
    build-depends:    text
    build-depends:    tasty
    build-depends:    tasty-hedgehog
    build-depends:    hedgehog
    build-depends:    containers
    build-depends:    bytestring
    build-depends:    memory
    build-depends:    typed-process
    build-depends:    quickcheck-instances
    default-language: Haskell2010
